feat(ai-assistant): secure AI service and wire gateway/places integration